hola mundo dentro de un div

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>trabajo por parejas - GitHub</title>
 </head>
 <body>
-    HOLA MUNDO
+    <div>
+        HOLA MUNDO
+    </div>    
 </body>
 </html>
